Yeti 1.1. Support newer JDKs with ASM 9.7.